--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,9 @@
 @font-face {font-family: 'Lato';font-style: normal;font-weight: 600;src: url(../assets/fonts/Lato/Lato-Semibold.woff) format('woff');}
 @font-face {font-family: 'Lato';font-style: normal;font-weight: 700;src: url(../assets/fonts/Lato/Lato-Bold.woff) format('woff');}
 
-@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 300;src: url(../assets/fonts/Montserrat/Montserrat-Hairline.otf) format('opentype');}
-@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 400;src: url(../assets/fonts/Montserrat/Montserrat-Light.otf) format('opentype');}
-@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 600;src: url(../assets/fonts/Montserrat/Montserrat-Regular.otf) format('opentype');}
-@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 700;src: url(../assets/fonts/Montserrat/Montserrat-Bold.otf) format('opentype');}
+@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 300;src: url(../assets/fonts/Montserrat/Montserrat-Light.otf) format('opentype');}
+@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 400;src: url(../assets/fonts/Montserrat/Montserrat-Regular.otf) format('opentype');}
+@font-face {font-family: 'Montserrat';font-style: normal;font-weight: 600;src: url(../assets/fonts/Montserrat/Montserrat-Bold.otf) format('opentype');}
 
 body {
   font-family: 'Lato';
@@ -14,4 +13,41 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
+}
+
+.navbar-default {
+  background-color: #f56954;
+  border: 1px solid #e74c3c;
+  border-radius: 0;
+  padding: 40px 0px;
+}
+
+.navbar-brand {
+  margin-left: 100px !important;
+  font-weight: 600;
+}
+
+.navbar a {
+  font-family: 'Montserrat';
+  color: white !important;
+}
+
+.avatar {
+  width: 150px;
+  border-radius: 10rem;
+}
+
+#intro {
+  margin-top: 50px;
+  text-align: center;
+}
+
+#name {
+  color: #49515a;
+  font-weight: 600;
+}
+
+#caption {
+  color: #808080;
+  font-weight: 400;
 }
