--- a/css/styles.css
+++ b/css/styles.css
@@ -174,15 +174,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #about p {
-  font-size: 1.65rem;
+  font-size: 1.45rem;
   font-weight: 600;
   color: #555;
-  line-height: 3.25rem;
+  line-height: 3rem;
 }
 
 #about {
   margin-top: 30px;
-  padding: 0px 30px;
 }
 
 #blog p {
@@ -321,19 +320,6 @@ h1, h2, h3, h4, h5, h6 {
   border-color: #5a4c91;
 }
 
-.btn-github {
-  background-color: #333;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1.25rem;
-}
-
-.btn-github i {
-  font-size: 1.5rem;
-  margin-left: 3px;
-  margin-right: 3px;
-}
-
 .fa-arrow-right {
   font-size: 1.2rem !important;
 }
@@ -367,4 +353,63 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-collapse {
   border-top: none;
   box-shadow: none;
+}
+
+.card {
+  margin-top: 20px;
+  height: 300px;
+  border-radius: 3px;
+  border: 1px solid #e0e0e0;
+}
+
+.card > .head {
+  padding: 10px;  
+}
+
+.card img {
+  width: 50px;
+}
+
+.card .content {
+  padding: 10px 20px;
+}
+
+.card .content > h5 {
+  font-size: 1.75rem;
+}
+
+.card .content > .tech {
+  font-family: 'Lato';
+  font-weight: bold;
+  color: #c0c0c0;
+  font-size: 1.5rem;
+}
+
+.card .content > .title {
+  font-size: 1.75rem;
+}
+
+.card .content > p {
+  font-size: 1.45rem;
+  color: #A0A0A0;
+}
+
+.card > .rails {
+  background: #e15258;
+}
+
+.card > .js {
+  background: #f8dc3d;
+}
+
+.card > .css {
+  background: #0092bf;
+}
+
+.card > .android {
+  background: #a4c639;
+}
+
+.card > .html {
+  background: #f06529;
 }
