--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,18 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px;  
 }
 
-.card img {
+.card > .head > .github {
+  color: white;
+  margin-top: 15px;
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+
+.card > .head > .github i {
+  font-size: 2rem;
+}
+
+.card > .head > img {
   width: 50px;
 }
 
