--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,11 @@ h1, h2, h3, h4, h5, h6 {
 
 #about {
   margin-top: 30px;
+  padding: 0px 60px;
+}
+
+#about h4 {
+  font-size: 1.65rem;
 }
 
 #blog p {
