--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #intro {
-  margin-top: 100px;
+  margin-top: 150px;
   text-align: center;
 }
 
 #name {
   color: #fff;
+  font-size: 2.5rem;
   font-weight: 600;
 }
 
