--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body {
   font-family: 'Lato';
 }
 
+#container {
+  padding-top: 150px;
+}
+
 .overlay {
   width: 100%;
   height: 100%;
@@ -31,12 +35,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar a {
   font-family: 'Montserrat';
-  font-size: 1.35rem;
+  font-size: 1.3rem;
+  border-bottom: 3px solid transparent;
   color: white !important;
 }
 
 .navbar a:hover {
-  color: #505050 !important;
+  border-bottom: 3px solid #ffcc00;
 }
 
 .navbar-brand {
@@ -49,6 +54,10 @@ h1, h2, h3, h4, h5, h6 {
   .navbar-brand {
     margin-left: 40px !important;
   }
+}
+
+.navbar-right {
+  margin-right: 62.5px;
 }
 
 .avatar {
@@ -75,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #caption, #location {
   color: #f4f4f4;
-  font-size: 1.15rem;
+  font-size: 1.25rem;
   font-weight: 400;
 }
 
