--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,28 @@
-@font-face {font-family: 'Lato';font-style: normal;font-weight: 300;src: url(../assets/fonts/Lato/Lato-Light.woff) format('woff');}
-@font-face {font-family: 'Lato';font-style: normal;font-weight: 400;src: url(../assets/fonts/Lato/Lato-Regular.woff) format('woff');}
-@font-face {font-family: 'Lato';font-style: normal;font-weight: 600;src: url(../assets/fonts/Lato/Lato-Semibold.woff) format('woff');}
-@font-face {font-family: 'Lato';font-style: normal;font-weight: 700;src: url(../assets/fonts/Lato/Lato-Bold.woff) format('woff');}
+@font-face {font-family: 'OpenSans';font-style: normal;font-weight: 300;src: url(../assets/fonts/OpenSans/OpenSans-Light.ttf);}
+@font-face {font-family: 'OpenSans';font-style: normal;font-weight: 400;src: url(../assets/fonts/OpenSans/OpenSans-Regular.ttf);}
 
 @font-face {font-family: 'Montserrat';font-style: normal;font-weight: 300;src: url(../assets/fonts/Montserrat/Montserrat-Light.otf) format('opentype');}
 @font-face {font-family: 'Montserrat';font-style: normal;font-weight: 400;src: url(../assets/fonts/Montserrat/Montserrat-Regular.otf) format('opentype');}
 @font-face {font-family: 'Montserrat';font-style: normal;font-weight: 600;src: url(../assets/fonts/Montserrat/Montserrat-Bold.otf) format('opentype');}
 
 body {
-  font-family: 'Lato';
-  padding-top: 160px;
+  font-family: 'OpenSans';
+  background: linear-gradient(#784ba3, #544b9d, #7857b6);
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
 }
 
+p, span {
+  font-weight: 300;
+}
+
 .navbar-default {
   background-color: transparent;
   border: none;
   border-radius: 0;
-  padding: 35px 0px;
+  padding: 45px 0px;
 }
 
 .navbar a {
@@ -31,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover {
-  border-bottom: 3px solid #ffcc00;
+  border-bottom: 3px solid #fff;
 }
 
 .navbar-brand {
@@ -51,13 +53,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .avatar {
-  width: 125px;
-  border-radius: 6px;
+  width: 100px;
+  border: 4px solid #fff;
+  border-radius: 10rem;
 }
 
 #intro {
-  margin-top: 150px;
-  padding-bottom: 275px;
+  margin-top: 100px;
+  padding-bottom: 245px;
   text-align: center;
 }
 
@@ -67,21 +70,42 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-#name {
+#intro img {
+  margin-bottom: 20px;
+}
+
+#intro h3 {
   color: #fff;
   font-size: 2rem;
   font-weight: 800;
 }
 
-#caption {
+#intro h5 {
   color: #f4f4f4;
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 #about-me {
   background: white;
   padding: 50px;
+}
+
+#about-me .row {
+  margin-top: 25px;
+}
+
+#about-me p {
+  font-size: 1.7rem;
+  line-height: 3rem;
+}
+
+.left-content {
+  padding-right: 40px;
+}
+
+.right-content {
+  padding-left: 40px;
 }
 
 #social {
