--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ p, span {
 
 .section {
   background: white;
-  padding: 100px 40px;
+  padding: 65px 40px 0px 40px;
 }
 
 .section h4 {
@@ -114,4 +114,16 @@ p, span {
   font-size: 1.65rem;
   line-height: 3rem;
   word-spacing: 1px;
+  margin-top: 30px;
+}
+
+.section img {
+  width: 100%;
+  padding: 10px 0px;
+}
+
+#work img {
+  text-align: center;
+  width: 85%;
+  padding: 10px;
 }
