--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,16 @@ p, span {
   margin-right: 62.5px;
 }
 
-.avatar {
-  width: 85px;
-  border-radius: 10rem;
+.avatar, .avatar-alt {
+  width: 100px;
+  height: 100px;
   border: 4px solid #f4f4f4;
+  border-radius: 10rem;
+}
+
+
+.avatar-alt {
+  display: none;
 }
 
 #intro {
