--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ p, span {
   margin-right: 62.5px;
 }
 
-.avatar, .avatar-alt {
+.avatar {
   width: 100px;
   height: 100px;
   border: 4px solid #f4f4f4;
@@ -142,7 +142,6 @@ p, span {
 
 .section img {
   width: 100%;
-  padding: 10px 0px;
 }
 
 #work img {
@@ -162,4 +161,40 @@ p, span {
 
 #tech {
   margin-top: 75px;
+}
+
+#skill-set {
+  padding: 50px 30px;
+}
+
+.progress-bar-ruby {
+  background-color: #e0492f;
+}
+
+.progress-bar-ember {
+  background-color: #f5664d;
+}
+
+.progress-bar-rails {
+  background-color: #dc4126;
+}
+
+.progress-bar-android {
+  background-color: #a4c639;
+}
+
+.skill-icon {
+  width: 45px !important;
+}
+
+.progress {
+  box-shadow: none;
+  height: 6px;
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+#skill-set .row {
+  padding: 10px;
+  margin-top: 20px;
 }
