Cleaning up some code

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,11 @@
-@font-face {font-family: 'OpenSans';font-style: normal;font-weight: 300;src: url(../fonts/OpenSans/OpenSans-Light.ttf);}
-@font-face {font-family: 'OpenSans';font-style: normal;font-weight: 400;src: url(../fonts/OpenSans/OpenSans-Regular.ttf);}
+@font-face {font-family: 'MyriadPro';font-style: normal;font-weight: 400;src: url(../fonts/MyriadPro/MyriadPro-Regular.otf);}
 
 @font-face {font-family: 'Montserrat';font-style: normal;font-weight: 400;src: url(../fonts/Montserrat/Montserrat-Regular.otf) format('opentype');}
 @font-face {font-family: 'Montserrat';font-style: normal;font-weight: 600;src: url(../fonts/Montserrat/Montserrat-Bold.otf) format('opentype');}
 
 
 body {
-  font-family: 'OpenSans';
+  font-family: 'MyriadPro';
   background: linear-gradient(#7857b0, #5857b0, #324a99);
 }
 
@@ -14,8 +13,41 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
 }
 
-p, span {
-  font-weight: 300;
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.65rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h4.underlined {
+  text-align: center;
+}
+
+h4.underlined:after {
+  content: '';
+  background: rgba(0,0,0,0.25);
+  height: 1px;
+  width: 25px;
+  display: block;
+  margin: 10px auto 0;
+}
+
+p {
+  font-size: 1.75rem;
+  line-height: 3rem;
+  word-spacing: 1px;
+  color: #444;
+  text-rendering: optimizeLegibility;
+}
+
+.wh-text {
+  color: #fff;
 }
 
 .navbar-default {
@@ -27,7 +59,7 @@ p, span {
 
 .navbar a {
   font-family: 'Montserrat';
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   color: white !important;
   border-radius: 5px;
   padding: 12px 15px !important;
@@ -38,106 +70,85 @@ p, span {
 }
 
 .navbar-brand {
-  font-size: 1.8rem !important;
-  margin-left: 125px !important;
-  font-weight: 400;
+  font-size: 1.75rem !important;
+  margin-left: 100px !important;
 }
 
 @media(max-width:767px){
   .navbar-brand {
-    margin-left: 40px !important;
+    margin-top: 12px;
+    margin-left: 25px !important;
   }
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background: #fff;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid #fff;
+}
+
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:active {
+  background: transparent;
+}
+
+.navbar-default .navbar-toggle:hover {
+  background: rgba(0,0,0,0.3);
+}
+
+.navbar-collapse {
+  border-top: none;
+  box-shadow: none;
 }
 
 .navbar-right {
   margin-right: 62.5px;
 }
 
-.avatar {
-  width: 100px;
-  height: 100px;
-  border: 4px solid #f4f4f4;
-  border-radius: 10rem;
-}
-
-
-.avatar-alt {
-  display: none;
-}
-
 #intro {
-  margin-top: 75px;
-  padding-bottom: 200px;
+  margin-top: 100px;
+  margin-bottom: 200px;
   text-align: center;
+}
+
+#intro h3 {
+  margin-top: 30px;
 }
 
 @media(max-width: 767px) {
   #intro {
-    margin-top: 100px;
+    margin-top: 75px;
+    margin-bottom: 150px;
   }
 }
 
-#intro img {
-  margin-bottom: 20px;
-}
-
-#intro h3 {
-  color: #fff;
-  font-size: 2rem;
-  font-weight: 600;
-} 
-
-#intro h5 {
-  color: #fff;
-  font-size: 1.25rem;
-  font-weight: 400;
-}
-
 #social {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 #social a {
+  margin: 0px 17px;
   display: inline-block;
-  margin: 17px;
   color: #fff;
 }
 
 #social a > i {
-  font-size: 2.5rem;
+  font-size: 2.65rem;
 }
 
 #social a:hover {
-  color: #c7c7c7;
+  color: #ccc;
 }
+
+
+
 
 .section {
   background: white;
   padding: 75px;
   padding-bottom: 25px;
-}
-
-.section h4 {
-  text-align: center;
-  font-size: 1.65rem;
-  font-weight: 400;
-  color: #233;
-}
-
-.section h4:after {
-  content: '';
-  background: rgba(0,0,0,0.25);
-  height: 1px;
-  width: 25px;
-  display: block;
-  margin: 10px auto 0;
-}
-
-.section p {
-  font-size: 1.65rem;
-  line-height: 3rem;
-  word-spacing: 1px;
-  margin-top: 30px;
 }
 
 .section img {
@@ -153,10 +164,22 @@ p, span {
 }
 
 .thumbnail p {
-  font-size: 1.7rem;
+  font-size: 1.75rem;
   font-weight: 600;
   margin-top: 0px;
   text-align: center;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border: 4px solid #f4f4f4;
+  border-radius: 10rem;
+}
+
+
+.avatar-alt {
+  display: none;
 }
 
 #tech {
@@ -164,7 +187,7 @@ p, span {
 }
 
 #skill-set {
-  padding: 10px 30px;
+  padding: 10px 5px;
 }
 
 .progress-bar-ruby {
@@ -200,22 +223,32 @@ p, span {
 }
 
 #tech .row {
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
-#projects .item {
-  padding: 80px 0px;
-  margin: 10px;
-  color: #FFF;
+#projects-owl {
+  margin: 40px 0px;
+}
+
+#projects-owl .item {
+  height: 200px;
+  padding: 20px;
+  margin: 10px 5px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   text-align: center;
 }
+
+.project-details {
+  position: absolute;
+  bottom: -200px;
+}
+
 .customNavigation{
   text-align: center;
 }
-//use styles below to disable ugly selection
+
 .customNavigation a{
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -223,16 +256,45 @@ p, span {
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+
+.customNavigation a > i {
+  margin: 5px 25px;
+  color: #c0c0c0;
+  font-size: 2.25rem;
+}
+
+.customNavigation a > i:hover,
+.customNavigation a > i:focus,
+.customNavigation a > i:active {
+  color: #505050;
+}
+
+.item h4 {
+  color: #fff;
 }
 
 .rails-item {
-  background: #dc4126 !important;
+  background: #ead57d !important;
 }
 
 .ember-item {
-  background: #f5664d;
+  background: #f7f9a2;
 }
 
 .android-item {
-  background: #a4c639;
+  background: #f7f7f7;
+}
+
+.js-item {
+  background: #f8dc3d;  
+}
+
+.js-item h4 {
+  color: #000;
+}
+
+.bootstrap-item {
+  background: #5b4181;
 }
