--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -262,38 +262,12 @@ img {
   transition: .2s ease-in-out;
 }
 
+#tech-stack {
+  padding: 25px;
+}
+
 #success-msg {
   display: none;
-}
-
-#projects-owl {
-  margin: 40px 0px;
-}
-
-.customNavigation{
-  text-align: center;
-}
-
-.customNavigation a{
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  cursor: pointer;
-}
-
-.customNavigation a > i {
-  margin: 5px 25px;
-  color: #c0c0c0;
-  font-size: 2.25rem;
-}
-
-.customNavigation a > i:hover,
-.customNavigation a > i:focus,
-.customNavigation a > i:active {
-  color: #505050;
 }
 
 .rails-item {
@@ -377,6 +351,13 @@ img {
   margin-top: 40px;
 }
 
+#contact-form input:active,
+#contact-form input:focus,
+#contact-form textarea:active,
+#contact-form textarea:focus {
+  border-color: #0b4181;
+}
+
 #contact-form button {  
   border: 1px solid #6357a0;
   padding: 10px 20px;
@@ -395,8 +376,7 @@ img {
 }
 
 .back-to-top {
-  background: none;
-  margin: 30px;
+  margin: 10px 25px;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -419,4 +399,17 @@ img {
 .back-to-top:active {
   background-color: #6357a0;
   color: #fff;
+}
+
+#footer {
+  border-top: 1px solid #e0e0e0;
+}
+
+#footer .section {
+  padding: 20px 100px;
+}
+
+#footer h5 {
+  display: inline;
+  margin-right: 5px;
 }
